# arche-bin

./: Cargo.toml  Justfile  README.md
arche-greeter/: Cargo.toml
arche-greeter/src/: app.rs  error.rs  ipc.rs  main.rs  session.rs  theme.rs  ui.rs
arche-legion/: Cargo.toml
arche-legion/src/: main.rs
