[package]
name = "arche-greeter"
description = "Ember-themed TUI greeter for greetd"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
greetd_ipc = { version = "0.10", features = ["codec", "sync-codec"] }
chrono = "0.4"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
